--- a/CanMLprac.ipynb
+++ b/CanMLprac.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4eb8b262",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "# Topic:simple linear regression with one variable"
    ]
   },
   {
