--- a/mlprac.ipynb
+++ b/mlprac.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0980ab6c",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.linear_model import LinearRegression\n"
+    "from sklearn.linear_model import LinearRegression\n",
+    "# Topic: Simple linear regression with one variable\n"
    ]
   },
   {
