--- a/CanMLprac.ipynb
+++ b/CanMLprac.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4eb8b262",
    "metadata": {},
    "outputs": [],
@@ -16,89 +16,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "1ca8eb5f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>per capita income (US$)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1970</td>\n",
-       "      <td>3399.299037</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1971</td>\n",
-       "      <td>3768.297935</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1972</td>\n",
-       "      <td>4251.175484</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1973</td>\n",
-       "      <td>4804.463248</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1974</td>\n",
-       "      <td>5576.514583</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   year  per capita income (US$)\n",
-       "0  1970              3399.299037\n",
-       "1  1971              3768.297935\n",
-       "2  1972              4251.175484\n",
-       "3  1973              4804.463248\n",
-       "4  1974              5576.514583"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 47 entries, 0 to 46\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   year                     47 non-null     int64  \n",
+      " 1   per capita income (US$)  47 non-null     float64\n",
+      "dtypes: float64(1), int64(1)\n",
+      "memory usage: 884.0 bytes\n"
+     ]
     }
    ],
    "source": [
     "file_path = r'C:/Users/LENOVO YOGA X380/Desktop/ML/canada_per_capita_income.csv'\n",
     "df = pd.read_csv(file_path)\n",
     "#df.columns\n",
-    "df.head()"
+    "df.head()\n",
+    "df.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "527af8f6",
    "metadata": {},
    "outputs": [
@@ -108,7 +56,7 @@
        "Text(0.5, 1.0, 'Year vs Per Capita Income in Canada')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -125,8 +73,12 @@
    ],
    "source": [
     "%matplotlib inline\n",
+    "X = df[['year']]\n",
+    "y = df['per capita income (US$)']\n",
+    "mod = LinearRegression()\n",
+    "mod.fit(X, y)\n",
     "plt.scatter(df.year, df['per capita income (US$)'], color='blue')\n",
-    "plt.plot(df.year, pred, color='red')\n",
+    "plt.plot(df.year, mod.predict(df[['year']]), color='red')\n",
     "plt.xlabel('Year')\n",
     "plt.ylabel('Per Capita Income (US$)')\n",
     "plt.title('Year vs Per Capita Income in Canada')"
@@ -134,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "fe807ece",
    "metadata": {},
    "outputs": [
@@ -172,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "47f58b4c",
    "metadata": {},
    "outputs": [
@@ -182,7 +134,7 @@
        "0.890916917957032"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "fbb8eff5",
    "metadata": {},
    "outputs": [
@@ -220,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "b1102706",
    "metadata": {},
    "outputs": [
@@ -230,7 +182,7 @@
        "Text(0.5, 1.0, 'Income Distribution in Canada')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -253,6 +205,52 @@
     "plt.xlabel('Income (US$)')\n",
     "plt.ylabel('Income Frequency')\n",
     "plt.title('Income Distribution in Canada')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a319bcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "# serializing and saving the model to a bin file for future use\n",
+    "\n",
+    "with open('mod_pickle','wb') as file_obj:\n",
+    "    pickle.dump(mod,file_obj) # creates a pickle file in binary\n",
+    "\n",
+    "with open('mod_pickle','rb') as f:\n",
+    "    model1 = pickle.load(f) # loads your trained model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b721c886",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\LENOVO YOGA X380\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\utils\\validation.py:2691: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([41288.69409442])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model1.predict([[2020]])"
    ]
   }
  ],
